made a few changes to the standard hyde theme, SEO related etc.

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,10 +9,11 @@
 			      {{ .Content }}
 			</div>
 
-			{{ if and (isset .Site.Params "disqusShortname") (ne .Site.Params.disqusShortname "") }}
+
+
 				<h2>Comments</h2>
-				{{ partial "disqus" . }}
-			{{ end }}
+				{{ partial "disqus.html" . }}
+
 		</div>
 
   </body>
