--- a/layouts/_default/test.html
+++ b/layouts/_default/test.html
@@ -4,11 +4,8 @@
 {{ partial "sidebar.html" . }}
 
   <div class="content container">
-    <h2>Blog Post Overview</h2>
     <ul class="posts">
-        {{ range where .Site.Pages "Section" "post" }}
-        
-
+        {{ range .Data.Pages }}
         <li>
           <span><a href="{{ .Permalink }}">{{ .Title }}</a> <time class="pull-right post-list">{{ .Date.Format "Mon, Jan 2, 2006" }}</time></span>
         </li>
