--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,10 +3,12 @@
 
 {{ partial "sidebar.html" . }}
 
+
+
     <div class="content container">
 <div class="posts">
 
-      {{ range .Data.Pages }}
+      {{range where .Data.Pages ".Params.dontshow" "!=" true}}
   <div class="post">
     <h1 class="post-title">
       <a href="{{ .Permalink }}">
@@ -15,10 +17,14 @@
     </h1>
 
     <span class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
+    {{ .Summary }}
+    <div class="read-more-link">
+       <a href="{{ .RelPermalink }}">Read More…</a>
+     </div>
 
-    {{ .Content }}
   </div>
   {{ end }}
+
 </div>
 </div>
 
