--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -3,17 +3,17 @@
     <div class="sidebar-about">
       <a href="{{ .Site.BaseURL }}"><h1>{{ .Site.Title }}</h1></a>
       <p class="lead">
-      {{ with .Site.Params.description }} {{.}} {{ else }}An elegant open source and mobile first theme for <a href="http://hugo.spf13.com">hugo</a> made by <a href="http://twitter.com/mdo">@mdo</a>. Originally made for Jekyll.{{end}}
+      {{ with .Site.Params.description }} {{.}} {{ else }} Words can't describe this blog.{{end}}
       </p>
     </div>
 
     <ul class="sidebar-nav">
-      <li><a href="/">Home</a> </li>
-      {{ range .Site.Menus.main }}
-        <li><a href="{{.URL}}"> {{ .Name }} </a></li>
+    <li><a href="/blog/overview/">blog post overview</a> </li>
+       {{ range .Site.Menus.main }}
+      <li><a href="{{.URL}}"> {{ .Name }} </a></li>
       {{end}}
     </ul>
 
-    <p>{{ with .Site.Params.copyright }}{{.}}{{ else }}&copy; {{.Now.Format "2006"}}. All rights reserved. {{end}}</p>
+    <p>{{ with .Site.Params.copyright }}{{.}}{{ else }}&copy; {{.Now.Format "2006"}} by @mbannert and @jburkhardt. All rights reserved. {{end}}</p>
   </div>
 </div>
